# mta-sim

./: .gitignore  0_graph_engine  CLAUDE.md  ErrorHandler.lua  MTATD.bundle.lua  MULTIAGENT_SYSTEM.md  README.md  REFACTORING_RECOMMENDATIONS.md  ServerCommands.lua  ServerGlobals.lua  SyntheticVideo2language.sln  config.json  fix_templates.py  game_capabilities.json  meta.xml  run_tests.bat  run_tests.sh  run_tests_standalone.lua  simulation_environment_capabilities.json  take_screenshot.ps1  temp_analysis.txt  test_1  test_2  test_3.json  test_4.json  test_5.txt  validate_templates.py  verify_structure.lua
.claude/: settings.local.json
SampSharp.Cimulator.Test/: GameMode.cs  Program.cs
SampSharp.ColAndreas/: ColAndreas.Internal.cs  ColAndreas.cs  SampSharp.ColAndreas.csproj
SampSharp.Streamer/: SampSharp.Streamer.csproj
SampSharp.Streamer.TestMode/: GameMode.cs  SampSharp.Streamer.TestMode.csproj
SampSharpCimulator/: Cimulator.Internals.cs  Cimulator.cs  SampSharp.Cimulator.csproj
SampSharpGameMode/: GameMode.cs  Player.cs  Program.cs  SampSharp.SyntheticGameMode.csproj
Vision2language.StoryGenerator/: StoryFactory.cs  SyntheticVideo2language.Story.csproj
client/: Debug.lua  (+6 more)
screenshot_module/: CMakeLists.txt  DEBUG_TRACING_SUMMARY.md  DesktopDuplicationBackend.exp  ILuaModuleManager.h  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  README.md  build.bat  build_all.bat  build_core.bat  build_mta.bat  main.cpp  main.exp  screenshot_module.vcxproj
screenshot_module/core/: DebugLog.h  FrameBuffer.cpp  FrameBuffer.h  MediaFoundationUtils.cpp  MediaFoundationUtils.h  ModalityManager.cpp  ModalityManager.h  VideoEncoder.cpp  VideoEncoder.h
screenshot_module/mta/: AsyncFrameProcessor.cpp  AsyncFrameProcessor.h  DesktopDuplicationBackend.cpp  DesktopDuplicationBackend.h  LuaBindings.h  main.cpp
(+1617 files in other folders)
